fast fix of background dimensions to ensure background is covered

--- a/css/style.css
+++ b/css/style.css
@@ -1290,7 +1290,7 @@ h4.modal-title {
 }
 @media(max-width:1280px){
 	.w3-banner-top {
-    background: url(../images/jen_with_bella.jpg) no-repeat -194px 0px;
+    background: url(../images/jen_with_bella.jpg) no-repeat 0px 0px;
     background-size: cover;
 	}
 }
@@ -1321,7 +1321,7 @@ h4.modal-title {
     height: 210px;
 	}
 	.w3-banner-top {
-    background: url(../images/jen_with_bella.jpg) no-repeat -376px 0px;
+    background: url(../images/jen_with_bella.jpg) no-repeat -0px 0px;
     background-size: cover;
 	}
 	.w3-edu-info2 h3 {
@@ -1418,7 +1418,7 @@ h4.modal-title {
     font-size: 2.3em;
 	}
 	.w3-banner-top {
-    background: url(../images/jen_with_bella.jpg) no-repeat -637px 0px;
+    background: url(../images/jen_with_bella.jpg) no-repeat -250px 0px;
     background-size: cover;
 	}
 	.w3-edu-grid-left {
@@ -1508,7 +1508,7 @@ h4.modal-title {
     padding: 7em 0 0 0;
 	}
 	.w3-banner-top {
-    background: url(../images/jen_with_bella.jpg) no-repeat -739px 0px;
+    background: url(../images/jen_with_bella.jpg) no-repeat -400px 0px;
     background-size: cover;
 	}
 }
@@ -1527,7 +1527,7 @@ h4.modal-title {
     margin: 1em;
 	}
 	.w3-banner-top {
-    background: url(../images/jen_with_bella.jpg) no-repeat -834px 0px;
+    background: url(../images/jen_with_bella.jpg) no-repeat -450px 0px;
     background-size: cover;
 	}
 	.w3-about-grid-left2 h4 {
@@ -1640,7 +1640,7 @@ h4.modal-title {
     padding: 13px 0px;
 	}
 	.w3-banner-top {
-    background: url(../images/jen_with_bella.jpg) no-repeat -1005px 0px;
+    background: url(../images/jen_with_bella.jpg) no-repeat -500px 0px;
     background-size: cover;
 	}
 	.title-w3ls h4, .w3ls-heading h3, .w3-gallery-head h3, .w3-about-head h3 {
